Fix weather icon size by cropping

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,8 +31,13 @@
   height: 60%;
   border-radius: 1rem;
   background: rgba(255, 160, 160, 0.6);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .info {
     display: flex;
+    justify-content: space-evenly;
 }
